--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <html>
 <head>
 <meta charset="utf-8">
-  <title>포도빛</title>
+  <title>CSL</title>
   </head>
   <body>
-    <h1> 포도빛의 Github Page 연습 </h1>
-    <p> 잘 나온다! </p>
+    <h1> Fundamentals on Control Systems (for me...) </h1>
+    <p> Let's go </p>
   </body>
 </html>
